# general_server

./: .gitignore  CMakeLists.txt  README.md
frontend/: home.html  log.html  login.html  loginError.html  loginOk.html  reg.html  regError.html  regOK.html
include/: auth_request_handler.h  config.h  fd_event.h  file_resource.h  http_conn.h  http_request_dispatcher.h  http_request_parser.h  http_response.h  local_route_resolver.h  locker.h  mysql_conn_pool.h  page_request_handler.h  proxy_request_target.h  proxy_route_resolver.h  resolved_route.h  route_result.h  thread_pool.h  threadpool.h  upstream_client.h  upstream_response.h  upstream_service.h  user_repository.h
src/: auth_request_handler.cpp  client.cpp  fd_event.cpp  file_resource.cpp  gatherWrite.cpp  http_conn.cpp  http_request_dispatcher.cpp  http_request_parser.cpp  http_response.cpp  local_route_resolver.cpp  mysql_conn_pool.cpp  page_request_handler.cpp  proxy_route_resolver.cpp  server.cpp  upstream_client.cpp  user_repository.cpp
static/: home.html  login.html  reg.html
static/game-information-manager/: game-information.html  game-information.js  login.html  reg.html
